# robin

./: .gitignore  .gitmodules  CMakeLists.txt
archive/hello_cube/: model.vert
archive/hello_triangle/: main.cpp  triangle.frag  triangle.vert
src/: CMakeLists.txt
src/gfx/: CMakeLists.txt
src/gfx/area_lights/: CMakeLists.txt  local_illum.frag  main.cpp  shadow_pass.frag  shadow_pass.vert
src/gfx/global_illum/: CMakeLists.txt  geom_pass.frag  geom_pass.vert  light_pass.frag  light_pass.vert  main.cpp
src/gfx/hello_cube/: CMakeLists.txt  main.cpp  model.frag  model.vert
src/gfx/hello_triangle/: CMakeLists.txt  main.cpp  triangle.vert
src/gfx/local_illum/: CMakeLists.txt  local_illum.frag  local_illum.vert  main.cpp  shadow_pass.frag
src/utils/: CMakeLists.txt  camera.cpp  camera.h  image.cpp  image.h  model.cpp  model.h  program.cpp  program.h  shader.cpp  shader.h  wireframe_drawer.cpp  wireframe_drawer.h
